Fix rust version and install a rust version compatible with LLVM 19 Update border radius in zen-browser.js to 8 pixels Set default width to 250px in ZenStartup.mjs Adjust overflow and border radius in zen-browser-container.css Update background color in vertical-tabs.css

--- a/src/browser/base/content/zen-styles/zen-browser-container.css
+++ b/src/browser/base/content/zen-styles/zen-browser-container.css
@@ -6,7 +6,10 @@
     position: relative;
 
     box-shadow: 0 0 1px 1px light-dark(rgba(0, 0, 0, 0.1), var(--zen-colors-border));
+    & .browserContainer,
     & browser {
+      mix-blend-mode: hue;
+      overflow: hidden;
       border-radius: var(--zen-webview-border-radius, var(--zen-border-radius));
     }
   }
